// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gomod/artifacts catches errors 1`] = `Array []`;

exports[`manager/gomod/artifacts does not execute go mod tidy when none of gomodTidy and gomodUpdateImportPaths are set 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "path": "go.sum",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "contents": "New main.go",
      "path": "go.mod",
      "type": "addition",
    },
  },
]
`;

exports[`manager/gomod/artifacts does not execute go mod tidy when none of gomodTidy and gomodUpdateImportPaths are set 2`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts returns if no go.sum found 1`] = `Array []`;

exports[`manager/gomod/artifacts returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts returns updated go.sum 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts skips gomodTidy without gomodUpdateImportPaths on major update 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New go.sum",
      "path": "go.sum",
      "type": "addition",
    },
  },
  Object {
    "file": Object {
      "contents": "New main.go",
      "path": "go.mod",
      "type": "addition",
    },
  },
]
`;

exports[`manager/gomod/artifacts skips gomodTidy without gomodUpdateImportPaths on major update 2`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts skips updating import paths for gopkg.in dependencies 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts skips updating import paths with gomodUpdateImportPaths on v0 to v1 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts supports docker mode with credentials 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -e GOPROXY -e GOPRIVATE -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -e GIT_CONFIG_KEY_0 -e GIT_CONFIG_VALUE_0 -e GIT_CONFIG_COUNT -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d -t ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GIT_CONFIG_COUNT": "1",
        "GIT_CONFIG_KEY_0": "url.https://some-token@github.com/.insteadOf",
        "GIT_CONFIG_VALUE_0": "https://github.com/",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts supports docker mode with goModTidy 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -e GOPROXY -e GOPRIVATE -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d -t ./... && go mod tidy && go mod tidy\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts supports docker mode with gomodTidy1.17 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -e GOPROXY -e GOPRIVATE -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d -t ./... && go mod tidy -compat=1.17 && go mod tidy -compat=1.17\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts supports docker mode without credentials 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/go:latest",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_go -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_go --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -e GOPROXY -e GOPRIVATE -e GONOPROXY -e GONOSUMDB -e GOFLAGS -e CGO_ENABLED -w \\"/tmp/github/some/repo\\" renovate/go:latest bash -l -c \\"go get -d -t ./...\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts supports global mode 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts supports vendor directory update 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod vendor",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts updates import paths with gomodUpdateImportPaths 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go install github.com/marwan-at-work/mod/cmd/mod@latest",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "mod upgrade --mod-name=github.com/google/go-github/v24 -t=28",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts updates import paths with latest tool version on invalid version constraint 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go install github.com/marwan-at-work/mod/cmd/mod@latest",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "mod upgrade --mod-name=github.com/google/go-github/v24 -t=28",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gomod/artifacts updates import paths with specific tool version from constraint 1`] = `
Array [
  Object {
    "cmd": "go get -d -t ./...",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go install github.com/marwan-at-work/mod/cmd/mod@v1.2.3",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "mod upgrade --mod-name=github.com/google/go-github/v24 -t=28",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "go mod tidy",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "CGO_ENABLED": "1",
        "GOFLAGS": "-modcacherw",
        "GONOPROXY": "noproxy.example.com/*",
        "GONOSUMDB": "1",
        "GOPRIVATE": "private.example.com/*",
        "GOPROXY": "proxy.example.com",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
